--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container mt-5">
         <h1>Contact Me!</h1>
-        <form class="row g-3" action="https://formsubmit.co/gripen@mail.com" method="POST">
+        <form class="row g-3" action="https://formsubmit.co/f10eb12b30c774df9d5e9a4ffa4e6019" method="POST">
             <div class="col-md-6">
                 <label for="firsName" class="form-label">First Name</label>
                 <input type="text" class="form-control" name="First Name" id="firsName" required>
