--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form class="row g-3" action="https://formsubmit.co/f10eb12b30c774df9d5e9a4ffa4e6019" method="POST">
             <div class="col-md-6">
                 <label for="firsName" class="form-label">First Name</label>
-                <input type="text" class="form-control" name="First Name" id="firsName" required>
+                <input type="text" class="form-control" name="name" id="firsName" required>
             </div>
             <div class="col-md-6">
                 <label for="firsName" class="form-label">Last Name</label>
@@ -26,11 +26,11 @@
             </div>
             <div class="col-md-4">
                 <label for="phoneNumber" class="form-label">Phone number</label>
-                <input type="text" class="form-control" name="phone" id="phoneNumber" placeholder="">
+                <input type="text" class="form-control" name="phone" id="phoneNumber" placeholder="+49 171 6895430">
             </div>
                 <div class="col-md-12">
                     <label for="comments" class="form-label">Comments</label>
-                    <textarea class="form-control" id="comments" name="comments" rows="3" required></textarea>
+                    <textarea class="form-control" id="comments" name="comments, questions" rows="3" required></textarea>
                 </div>
                 <div class="col-md-12">
                     <button type="submit" class="btn btn-primary">submit</button>
