--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <div class="container mt-5">
         <h1>Contact Me!</h1>
         <form class="row g-3" action="https://formsubmit.co/f10eb12b30c774df9d5e9a4ffa4e6019" method="POST">
+            <!-- Honeypot -->
+            <input type="text" name="_honey" style="display: none;">
             
-            <input type="text" name="_pot" style="display: none;">
-            
-            <input type="hidden" name="_cha" value="false">
+            <!-- Disable Captcha -->
+            <input type="hidden" name="_captcha" value="false"> 
 
             <div class="col-md-6">
                 <label for="firsName" class="form-label">First Name</label>
