--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-md-6">
                 <label for="firsName" class="form-label">Last Name</label>
-                <input type="text" class="form-control" name="Last Name" id="lastName" required>
+                <input type="text" class="form-control" name="Last&nbsp;Name" id="lastName" required>
             </div>
             <div class="col-md-8">
                 <label for="emailInfo" class="form-label">Email</label>
@@ -36,7 +36,7 @@
             </div>
                 <div class="col-md-12">
                     <label for="comments" class="form-label">Comments</label>
-                    <textarea class="form-control" id="comments" name="comments, questions" rows="3" required></textarea>
+                    <textarea class="form-control" id="comments" name="comments,&nbsp;questions" rows="3" required></textarea>
                 </div>
                 <div class="col-md-12">
                     <button type="submit" class="btn btn-primary">submit</button>
