--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <!-- Disable Captcha -->
             <input type="hidden" name="_captcha" value="false"> 
 
+            <input type="hidden" name="_next" value="https://jasgripen39.github.io/formsubmit1/success.html">
+
             <div class="col-md-6">
                 <label for="firsName" class="form-label">First Name</label>
                 <input type="text" class="form-control" name="name" id="firsName" required>
